--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -33,8 +33,8 @@
                                 <td>{{profissional.telefone}}</td>
                                 <td>{{profissional.celular}}</td>
                                 <td>
-                                    <a data-toggle="modal" ng-click="editar(profissional)" ><i class="fa fa-fw fa-edit"></i></a>
-                                    <a data-toggle="modal" ng-click="confirmExcluir(profissional)"><i class="fa fa-fw fa-trash"></i></a>
+                                    <a ng-click="editar(profissional)" ><i class="fa fa-fw fa-edit"></i></a>
+                                    <a ng-click="confirmExcluir(profissional)"><i class="fa fa-fw fa-trash"></i></a>
                                 </td>
                             </tr>
 
