--- a/src/main/webapp/view/cliente.html
+++ b/src/main/webapp/view/cliente.html
@@ -13,7 +13,7 @@
             <div class="box box-primary">
                 <div class="box-body">
                     <div>
-                        <a class="btn btn-primary" data-toggle="modal" data-target="#novo-cliente"><i class="fa fa-fw fa-plus-circle"></i>Novo Cliente</a>
+                        <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar()"><i class="fa fa-fw fa-plus-circle"></i>Novo Cliente</a>
                     </div>
                     <br />
                     <table id="cliente-table" class="table table-condensed table-hover">
@@ -31,8 +31,8 @@
                                 <td>{{cliente.telefone}}</td>
                                 <td>{{cliente.email}}</td>
                                 <td>
-                                    <a data-toggle="modal" data-target="#novo-cliente"><i class="fa fa-fw fa-edit"></i></a>
-                                    <a data-toggle="modal" ><i class="fa fa-fw fa-trash"></i></a>
+                                    <a ng-click="editar(cliente)" ><i class="fa fa-fw fa-edit"></i></a>
+                                    <a ng-click="confirmExcluir(cliente)"><i class="fa fa-fw fa-trash"></i></a>
                                 </td>
                             </tr>
                         </tbody>
@@ -48,10 +48,10 @@
 </section><!-- /.content -->
 
 
-<div class="fade modal" id="novo-cliente">
+<div class="fade modal" id="modal-cliente">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <form class="form-horizontal">
+            <form class="form-horizontal" name="dadosClienteForm">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title" id="myModalLabel">Novo Cliente</h4>
@@ -65,101 +65,114 @@
                             <div class="active tab-pane" id="dados">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        {{cliente}}
-                                        <form name="clienteForm" class="form-horizontal">
-                                            <div class="form-group">
-                                                <label for="nome" class="col-sm-3 control-label">Nome</label>
-                                                <div class="col-sm-8">
-                                                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do cliente" ng-model="cliente.nome" >
+                                        {{dadosClienteForm.$error}}
+                                        <div class="form-group" ng-class="{'has-error': (dadosClienteForm.nome.$invalid && dadosClienteForm.nome.$dirty)}">
+                                            <label for="nome" class="col-sm-3 control-label">Nome</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do cliente" ng-model="cliente.nome" ng-required="true" ng-minlength="5" ng-maxlength="255">
+                                                <div ng-messages="dadosClienteForm.nome.$error" ng-show="dadosClienteForm.nome.$dirty">
+                                                    <div ng-message="required" class="help-block">
+                                                        Por favor, preencher o campo nome
+                                                    </div>
+                                                    <div ng-message="minlength" class="help-block">
+                                                        O campo descrição deve ter no mínimo 5 caracteres
+                                                    </div>
+                                                    <div ng-message="maxlength" class="help-block">
+                                                        O campo descrição de ter no máximo 255 caracteres
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="telefone" class="col-sm-3 control-label" >Telefone</label>
-                                                <div class="col-sm-8">
-                                                    <input type="tel" class="form-control" id="telefone" name="telefone" placeholder="Telefone do cliente" ng-model="cliente.telefone">
+                                        </div>
+                                        <div class="form-group" ng-class="{'has-error': (dadosClienteForm.telefone.$invalid && dadosClienteForm.telefone.$dirty)}">
+                                            <label for="telefone" class="col-sm-3 control-label" >Telefone</label>
+                                            <div class="col-sm-8">
+                                                <input type="tel" class="form-control" id="telefone" name="telefone" placeholder="Telefone do cliente" ng-model="cliente.telefone" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
+                                                <div ng-messages="dadosClienteForm.telefone.$error" ng-show="dadosClienteForm.telefone.$dirty">
+                                                    <div ng-message="mask" class="help-block">
+                                                        Por favor, informe um telefone válido
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="email" class="col-sm-3 control-label" >E-mail</label>
-                                                <div class="col-sm-8">
-                                                    <input type="email" class="form-control" id="email" name="email" placeholder="E-mail do cliente" ng-model="cliente.email">
+                                        </div>
+                                        <div class="form-group" ng-class="{'has-error': (dadosClienteForm.email.$invalid && dadosClienteForm.email.$dirty)}">
+                                            <label for="email" class="col-sm-3 control-label" >E-mail</label>
+                                            <div class="col-sm-8">
+                                                <input type="email" class="form-control" id="email" name="email" placeholder="E-mail do cliente" ng-model="cliente.email">
+                                                <div ng-messages="dadosClienteForm.email.$error" ng-show="dadosClienteForm.email.$dirty">
+                                                    <div ng-message="email" class="help-block">
+                                                        Por favor, informe um e-mail válido
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="nascimento" class="col-sm-3 control-label">Data de Nascimento</label>
-                                                <div class="col-sm-8">
-                                                    <input type="date" class="form-control" id="nascimento" name="nascimento" placeholder="Data de Nascimento do cliente" ng-model="cliente.nascimento">
-                                                </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="input-endereco" class="col-sm-3 control-label">Endereço</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" class="form-control" id="input-endereco" placeholder="Endereço">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="input-numero" class="col-sm-3 control-label">Número</label>
+                                            <div class="col-sm-4">
+                                                <input type="text" class="form-control" id="input-numero" placeholder="Número">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="input-estado" class="col-sm-3 control-label">Estado</label>
+                                            <div class="col-sm-3">
+                                                <select class="form-control" id="input-estado">
+                                                    <option value="">Selecione</option>
+                                                    <option value="AC">Acre</option>
+                                                    <option value="AL">Alagoas</option>
+                                                    <option value="AP">Amapá</option>
+                                                    <option value="AM">Amazonas</option>
+                                                    <option value="BA">Bahia</option>
+                                                    <option value="CE">Ceará</option>
+                                                    <option value="DF">Distrito Federal</option>
+                                                    <option value="ES">Espirito Santo</option>
+                                                    <option value="GO">Goiás</option>
+                                                    <option value="MA">Maranhão</option>
+                                                    <option value="MS">Mato Grosso do Sul</option>
+                                                    <option value="MT">Mato Grosso</option>
+                                                    <option value="MG">Minas Gerais</option>
+                                                    <option value="PA">Pará</option>
+                                                    <option value="PB">Paraíba</option>
+                                                    <option value="PR">Paraná</option>
+                                                    <option value="PE">Pernambuco</option>
+                                                    <option value="PI">Piauí</option>
+                                                    <option value="RJ">Rio de Janeiro</option>
+                                                    <option value="RN">Rio Grande do Norte</option>
+                                                    <option value="RS">Rio Grande do Sul</option>
+                                                    <option value="RO">Rondônia</option>
+                                                    <option value="RR">Roraima</option>
+                                                    <option value="SC">Santa Catarina</option>
+                                                    <option value="SP">São Paulo</option>
+                                                    <option value="SE">Sergipe</option>
+                                                    <option value="TO">Tocantins</option>
+                                                </select>
                                             </div>
 
-                                            <div class="form-group">
-                                                <label for="input-endereco" class="col-sm-3 control-label">Endereço</label>
-                                                <div class="col-sm-8">
-                                                    <input type="text" class="form-control" id="input-endereco" placeholder="Endereço">
-                                                </div>
+                                            <label for="input-cidade" class="col-sm-1 control-label">Cidade</label>
+                                            <div class="col-sm-4">
+                                                <select class="form-control" id="input-cidade">
+                                                    <option value="">Selecione</option>
+                                                </select>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="input-numero" class="col-sm-3 control-label">Número</label>
-                                                <div class="col-sm-4">
-                                                    <input type="text" class="form-control" id="input-numero" placeholder="Número">
-                                                </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="input-bairro" class="col-sm-3 control-label">Bairro</label>
+                                            <div class="col-sm-3">
+                                                <select class="form-control" id="input-bairro">
+                                                    <option value="">Selecione</option>
+                                                </select>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="input-estado" class="col-sm-3 control-label">Estado</label>
-                                                <div class="col-sm-3">
-                                                    <select class="form-control" id="input-estado">
-                                                        <option value="">Selecione</option>
-                                                        <option value="AC">Acre</option>
-                                                        <option value="AL">Alagoas</option>
-                                                        <option value="AP">Amapá</option>
-                                                        <option value="AM">Amazonas</option>
-                                                        <option value="BA">Bahia</option>
-                                                        <option value="CE">Ceará</option>
-                                                        <option value="DF">Distrito Federal</option>
-                                                        <option value="ES">Espirito Santo</option>
-                                                        <option value="GO">Goiás</option>
-                                                        <option value="MA">Maranhão</option>
-                                                        <option value="MS">Mato Grosso do Sul</option>
-                                                        <option value="MT">Mato Grosso</option>
-                                                        <option value="MG">Minas Gerais</option>
-                                                        <option value="PA">Pará</option>
-                                                        <option value="PB">Paraíba</option>
-                                                        <option value="PR">Paraná</option>
-                                                        <option value="PE">Pernambuco</option>
-                                                        <option value="PI">Piauí</option>
-                                                        <option value="RJ">Rio de Janeiro</option>
-                                                        <option value="RN">Rio Grande do Norte</option>
-                                                        <option value="RS">Rio Grande do Sul</option>
-                                                        <option value="RO">Rondônia</option>
-                                                        <option value="RR">Roraima</option>
-                                                        <option value="SC">Santa Catarina</option>
-                                                        <option value="SP">São Paulo</option>
-                                                        <option value="SE">Sergipe</option>
-                                                        <option value="TO">Tocantins</option>
-                                                    </select>
-                                                </div>
 
-                                                <label for="input-cidade" class="col-sm-1 control-label">Cidade</label>
-                                                <div class="col-sm-4">
-                                                    <select class="form-control" id="input-cidade">
-                                                        <option value="">Selecione</option>
-                                                    </select>
-                                                </div>
+                                            <label for="input-cep" class="col-sm-1 control-label">CEP</label>
+                                            <div class="col-sm-4">
+                                                <input type="text" class="form-control" id="input-cep" placeholder="CEP">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="input-bairro" class="col-sm-3 control-label">Bairro</label>
-                                                <div class="col-sm-3">
-                                                    <select class="form-control" id="input-bairro">
-                                                        <option value="">Selecione</option>
-                                                    </select>
-                                                </div>
-
-                                                <label for="input-cep" class="col-sm-1 control-label">CEP</label>
-                                                <div class="col-sm-4">
-                                                    <input type="text" class="form-control" id="input-cep" placeholder="CEP">
-                                                </div>
-                                            </div>
-                                        </form>
+                                        </div>
                                     </div><!-- /.col -->
                                 </div>
 
@@ -169,7 +182,8 @@
                 </div>
                 <div class="modal-footer">
                     <a class="btn btn-default" data-dismiss="modal">Cancelar</a>
-                    <a class="btn btn-primary">Salvar</a>
+                    <button type="button" class="btn btn-primary" ng-hide="!cliente.id" ng-click="atualizar(cliente)" ng-disabled="dadosClienteForm.$invalid" >Atualizar</button>
+                    <button type="button" class="btn btn-primary" ng-hide="cliente.id" ng-click="salvar(cliente)" ng-disabled="dadosClienteForm.$invalid" >Salvar</button>
                 </div>
             </form>
         </div>
