--- a/src/main/webapp/view/cliente.html
+++ b/src/main/webapp/view/cliente.html
@@ -13,7 +13,7 @@
             <div class="box box-primary">
                 <div class="box-body">
                     <div>
-                        <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar()"><i class="fa fa-fw fa-plus-circle"></i>Novo Cliente</a>
+                        <a class="btn btn-primary" data-toggle="modal" data-target="#modal-cliente"><i class="fa fa-fw fa-plus-circle"></i>Novo Cliente</a>
                     </div>
                     <br />
                     <table id="cliente-table" class="table table-condensed table-hover">
